Modificación de algunas partes de la introducción

--- a/informe/proyecto/caso/caso.tex
+++ b/informe/proyecto/caso/caso.tex
@@ -1,6 +1,6 @@
 \chapter{Caso de Estudio}
 \section{Introducción}
 
-Una empresa de cines, ubicada en Bogotá, busca desarrollar un software que le permita administrar su funcionamiento, dicho software debe estar en la capacidad de manejar la boletería de todos los cinemas que tiene en la ciudad, para cada una de las diversas funciones que ofrezca el cinema, además debe tener un registro de los empleados que trabajen para el cinema. Finalmente debe contar cn el manejo de los insumos de confiteria que se ofrezcan en cada uno de los cinemas de la ciudad.
+Una empresa de cines, ubicada en Bogotá, busca desarrollar un software que le permita administrar su funcionamiento. Dicho software debe estar en la capacidad de gestionar la boletería de todos los cinemas que tiene a lo largo de la ciudad para cada una de las diversas funciones ofrecidas en las distintas horas del día en tareas como compra y reserva de boletas, al igual que las ventas de confiteria de cada cinema. Además estará en la capacidad de llevar un registro y monitoreo de los empleados y el manejo de insumos y maquinaria de confitería que estén a disposición de cada cinema.
 
 Durante el siguiente libro se realizará un estudio del problema planteado, buscando encontrar una solución eficiente mediante la implementación de la ingeniería de software.
