--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -1,21 +1,145 @@
-\documentclass[11pt,letterpaper]{book}
-%-----------------------PAQUTES---------------------------%
-\usepackage{graphicx}
-\usepackage[spanish]{babel}
-%\usepackage{listings}
-%\usepackage{color}
-%------------------------MACROS---------------------------%
-%\input{sbmacros}
-%-----------------------PORTADA---------------------------%
-\title{Diseño de Software}
-\author{Andrés Felipe Rentería Velandia, Andrés Leonardo Arias Uribe}
+% Modificación de una plantilla de Latex de Mathias Legrand (legrand.mathias@gmail.com)
+% sobre modificaciones de Vel (vel@latextemplates.com) para adaptarla 
+% al castellano y a las necesidades de escribir informática y matemáticas.
+%
+% Modificada por: Mario Román
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% The Legrand Orange Book
+% LaTeX Template
+% Version 2.0 (9/2/15)
+%
+% This template has been downloaded from:
+% http://www.LaTeXTemplates.com
+%
+% Mathias Legrand (legrand.mathias@gmail.com) with modifications by:
+% Vel (vel@latextemplates.com)
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
+% Compiling this template:
+% This template uses biber for its bibliography and makeindex for its index.
+% When you first open the template, compile it from the command line with the 
+% commands below to make sure your LaTeX distribution is configured correctly:
+%
+% 1) pdflatex main
+% 2) makeindex main.idx -s StyleInd.ist
+% 3) biber main
+% 4) pdflatex main x 2
+%
+% After this, when you wish to update the bibliography/index use the appropriate
+% command above and make sure to compile with pdflatex several times 
+% afterwards to propagate your changes to the document.
+%
+% This template also uses a number of packages which may need to be
+% updated to the newest versions for the template to compile. It is strongly
+% recommended you update your LaTeX distribution if you have any
+% compilation errors.
+%
+% Important note:
+% Chapter heading images should have a 2:1 width:height ratio,
+% e.g. 920px width and 460px height.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+%%% Configuración del papel.
+% fleqn: Alinea ecuaciones a la izquierda
+\documentclass[11pt, fleqn, spanish]{book}
+
+%%% Castellano.
+% noquoting: Permite uso de comillas no españolas.
+% lcroman: Permite la enumeración con numerales romanos en minúscula.
+% fontenc: Usa la fuente completa para que pueda copiarse correctamente del pdf.
+\usepackage[spanish,es-noquoting,es-lcroman]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\selectlanguage{spanish}
+
+%%% Matemáticas.
+% Paquetes de la AMS. Para entornos de ecuaciones.
+\usepackage{amsmath,amsfonts,amsthm}
+
+
+%----------------------------------------------------------------------------------------
+
+\input{structure} % Insert the commands.tex file which contains the majority of the structure behind the template
+
 \begin{document}
-\maketitle
-\tableofcontents
-\listoffigures
+	
+	%----------------------------------------------------------------------------------------
+	%	TÍTULO
+	%----------------------------------------------------------------------------------------
+	
+	\begingroup
+	\thispagestyle{empty}
+	\begin{tikzpicture}[remember picture,overlay]
+	\coordinate [below=12cm] (midpoint) at (current page.north);
+	\node at (current page.north west)
+	{\begin{tikzpicture}[remember picture,overlay]
+		\node[anchor=north west,inner sep=0pt] at (0,0) {\includegraphics[width=\paperwidth]{1}}; % Background image
+		\draw[anchor=north] (midpoint) node [fill=ao!72!white,fill opacity=1,text opacity=1,inner sep=1cm]{\Huge\centering\bfseries\sffamily\parbox[c][][t]{\paperwidth}
+			{\centering Cine+\\[15pt] % Book title
+				{\huge Andrés Leonardo Arias Uribe}\\ % Subtitle
+				{\huge Andrés Felipe Rentería Velandia}
+			}}; % Author name
+		\end{tikzpicture}};
+\end{tikzpicture}
+\vfill
+\endgroup
 
-\part{PROYECTO}
+%----------------------------------------------------------------------------------------
+%	COPYRIGHT
+%----------------------------------------------------------------------------------------
+
+%\newpage
+%~\vfill
+%\thispagestyle{empty}
+
+%\noindent Copyright \copyright\ 2013 John Smith\\ % Copyright notice
+
+%\noindent \textsc{Published by Publisher}\\ % Publisher
+
+%\noindent \textsc{book-website.com}\\ % URL
+
+%\noindent Licensed under the Creative Commons Attribution-NonCommercial 3.0 Unported License 
+%(the ``License''). You may not use this file except in compliance with the License. You may 
+%obtain a copy of the License at \url{http://creativecommons.org/licenses/by-nc/3.0}. Unless 
+%required by applicable law or agreed to in writing, software distributed under the License 
+%is distributed on an \textsc{``as is'' basis, without warranties or conditions of any kind}, 
+%either express or implied. See the License for the specific language governing permissions 
+%and limitations under the License.\\ % License information
+
+%\noindent \textit{First printing, March 2013} % Printing/edition date
+
+%----------------------------------------------------------------------------------------
+%	CONTENIDOS
+%----------------------------------------------------------------------------------------
+
+\chapterimage{5.pdf} % Table of contents heading image
+\pagestyle{empty} % No headers
+\tableofcontents % Print the table of contents itself
+\cleardoublepage % Forces the first chapter to start on an odd page so it's on the right
+\pagestyle{fancy} % Print headers again
+
+%----------------------------------------------------------------------------------------
+%	PART
+%----------------------------------------------------------------------------------------
+
+\part{Proyecto}
+
+%----------------------------------------------------------------------------------------
+%	CHAPTER 1
+%---------------------------------------------------------------------------------------
+\chapterimage{4.pdf} % Chapter heading image
 \include{proyecto/caso/caso}
-
 
 \end{document}
