Detalles sobre el proceso de software a utilizar

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -142,4 +142,7 @@
 \chapterimage{4.pdf} % Chapter heading image
 \include{proyecto/caso/caso}
 
+\chapterimage{5.pdf} % Chapter heading image
+\include{proyecto/proceso/proceso}
+
 \end{document}
