--- a/base/informe.tex
+++ b/base/informe.tex
@@ -85,7 +85,7 @@
 	\coordinate [below=12cm] (midpoint) at (current page.north);
 	\node at (current page.north west)
 	{\begin{tikzpicture}[remember picture,overlay]
-		\node[anchor=north west,inner sep=0pt] at (0,0) {\includegraphics[width=\paperwidth]{1}}; % Background image
+		\node[anchor=north west,inner sep=0pt] at (0,0) {\includegraphics[width=\paperwidth,height=\paperheight]{1}}; % Background image
 		\draw[anchor=north] (midpoint) node [fill=ao!72!white,fill opacity=1,text opacity=1,inner sep=1cm]{\Huge\centering\bfseries\sffamily\parbox[c][][t]{\paperwidth}
 			{\centering Cine+\\[15pt] % Book title
 				{\huge Andrés Leonardo Arias Uribe}\\ % Subtitle
@@ -145,38 +145,38 @@
 %----------------------------------------------------------------------------------------
 %	CHAPTER 1
 %---------------------------------------------------------------------------------------
-\chapterimage{4.pdf} % Chapter heading image
+\chapterimage{2.pdf} % Chapter heading image
 \include{proyecto/caso/caso}
 
 \chapterimage{5.pdf} % Chapter heading image
 \include{proyecto/proceso/proceso}
 \part{DISEÑO}
-\chapterimage{4.pdf} % Chapter heading image
+\chapterimage{3.pdf} % Chapter heading image
 \include{diseno/requerimientos/requerimientos}
 
-\chapterimage{5.pdf} % Chapter heading image
+\chapterimage{4.pdf} % Chapter heading image
 \include{diseno/interaccion/interaccion}
 
-\chapterimage{4.pdf} % Chapter heading image
+\chapterimage{2.pdf} % Chapter heading image
 \include{diseno/clases/clases}
 
 \chapterimage{5.pdf} % Chapter heading image
 \include{diseno/patrones/patrones}
 
-\chapterimage{4.pdf} % Chapter heading image
+\chapterimage{3.pdf} % Chapter heading image
 \include{diseno/estados/estados}
 
-\chapterimage{5.pdf} % Chapter heading image
+\chapterimage{4.pdf} % Chapter heading image
 \include{diseno/componentes/componentes}
 
-\chapterimage{4.pdf} % Chapter heading image
+\chapterimage{2.pdf} % Chapter heading image
 \include{diseno/nodos/nodos}
 
 \chapterimage{5.pdf} % Chapter heading image
 \include{diseno/actividades/actividades}
 \part{REFLEXIONES}
 
-\chapterimage{5.pdf} % Chapter heading image
+\chapterimage{3.pdf} % Chapter heading image
 \include{reflexiones/conclusiones/conclusiones}
 %---bibliografia
 
