--- a/informe/proyecto/proceso/proceso.tex
+++ b/informe/proyecto/proceso/proceso.tex
@@ -1,6 +1,6 @@
 \chapter{Proceso}
 
-Para la realización de este proyecto, se utilizará el proceso de software 'Prototipo'; proceso que permite generar iteraciones en las que se genera un prototipo en cada una, que será expuesto a pruebas y labores de mantenimiento para iniciar la siguiente iteración. Todo esto con la finalidad de obtener un producto final que cumpla con todos los requerimientos plantados para el buen funcionamiento.
+Para la realización de este proyecto, se utilizará el proceso de software 'Prototipo'; proceso que permite generar iteraciones en las que se genera un prototipo en cada una de ellas,y que posteriormente será expuesto a pruebas y labores de mantenimiento para iniciar la siguiente iteración. Todo esto con la finalidad de obtener un producto final que cumpla con todos los requerimientos planteados para el buen funcionamiento.
 
 \begin{figure}[h!]
 	\centering
@@ -9,13 +9,32 @@ Para la realización de este proyecto, se utilizará el proceso de software 'Pro
 \end{figure}
 \section{Implementación}
 
-El proyecto será estructurado como un conjunto de módulos o componentes, los cuales serán organizados en una escala de dependencia, siendo desarrollados del más independiente al más dependiente. El proceso 'Prototipo' permitirá realizar una iteración por cada módulo propuesto, sin descartar hacer subiteraciones dentro de cada iteración; esto permitirá construir el prototipo final componente por componente. Es de aclarar que un componente no será agregado al prototipo final hasta que no esté totalmente depurado y funcional, proceso que facilitan la iteraciones.
+El proyecto será estructurado como un conjunto de módulos o componentes, los cuales serán organizados en una escala de dependencia, siendo desarrollados del más independiente al más dependiente. El proceso 'Prototipo' permitirá realizar una iteración por cada módulo propuesto, sin descartar hacer subiteraciones dentro de cada iteración; esto permitirá construir el prototipo final componente por componente. Es de aclarar que un componente no será agregado al prototipo final hasta que no esté totalmente depurado y funcional, tarea para la cual las iteraciones serán claves.
 
 
 \subsection{Módulos}
 
-*agregar imagen diagrama de componentes*
+\begin{figure}[h!]
+	\centering
+\includegraphics[width=0.7\linewidth]{proyecto/proceso/imgs/modulos}
+	\caption{Módulos del sistema}
+\end{figure}
 
-*descripcion de cada modulo*
+
+\begin{itemize}
+	\item{Cliente Usuario}
+		\begin{enumerate}
+			\item{\textbf{Registro usuario:} Módulo encargado de la inscripción, modificación y eliminación de usuarios dentro de la plataforma y de la gestión de las suscripciones especiales que existan dentro de la cadena de cines.}
+			\item{\textbf{Boletería:} Módulo encargado de la visualización y selección de películas, selección de asientos y reservas y ventas de boletería.}
+			\item{\textbf{Ventas:} Módulo encargado de visualizar el catálogo de comidas y accesorios y generar tickets de pago para las distintas ventas.}
+		\end{enumerate}
+	\item{Cliente Administrativo}
+		\begin{enumerate}
+			\item{\textbf{Gestión funciones:} Módulo encargado de agregar, eliminar y asignar funciones y salas a las distintas películas disponibles en el cinema, así como agregar próximos estrenos y eliminar películas de la cartelera.}
+			\item{\textbf{Registro empleados:} Módulo encargado de llevar el registro de los empleados que trabajan en cada cinema, así como agregarlos o eliminarlos.}
+			\item{\textbf{Inventario:} Módulo encargado de llevar control sobre el inventario de materia prima de confitería y maquinaria dentro de cada cinema.}
+		\end{enumerate}
+	\item{\textbf{Base de datos:} Módulo encargado de la insersión, actualización, modificación y almacenamiento de toda información que posteriormente utilizará el sistema}
+\end{itemize}
 
 *diagrama de gannt*
