--- a/informe/proyecto/proceso/proceso.tex
+++ b/informe/proyecto/proceso/proceso.tex
@@ -37,4 +37,27 @@ El proyecto será estructurado como un conjunto de módulos o componentes, los c
 	\item{\textbf{Base de datos:} Módulo encargado de la insersión, actualización, modificación y almacenamiento de toda información que posteriormente utilizará el sistema}
 \end{itemize}
 
-*diagrama de gannt*
+\section{Diagrama de Gantt}
+Se estimó el tiempo del proyecto en total 89 días, y bajo la premisa de que en promedio se dedicarán 10 días a cada uno de los modulos como máximo, teniendo como fecha de inicio el día 11 de abril y como fecha final el 8 de julio.
+Teniendo en cuenta los módulos mostrados en la imagen 2.2 se llegó al acuerdo de que la forma más eficiente de sería desarrollarlos en el siguiente orden:
+\begin{itemize}
+	\item Módulo de bases de datos.
+	\item Módulo de Gestión de empleados
+	\item Módulo de Inventario.
+	\item Módulo de Gestión de funciones.
+	\item Módulo de Registro de Usuario.
+	\item Módulo de ventas.
+	\item Módulo de Boletería
+\end{itemize}
+
+En las imágenes 2.3 y 2.4 se muestran los tiempos dedicados para el desarrollo de cada uno de estos módules, mediante un diagrama de Gantt
+\begin{figure}[h!]
+	\centering
+\includegraphics[width=1\linewidth]{proyecto/proceso/imgs/modulo1}
+	\caption{Poyección del desarrollo (1)}
+\end{figure}
+\begin{figure}[h!]
+	\centering
+\includegraphics[width=0.9\linewidth]{proyecto/proceso/imgs/modulo2}
+	\caption{Poyección del desarrollo (2)}
+\end{figure}
