Definicion de la metodología a usar

--- a/informe/proyecto/proceso/proceso.tex
+++ b/informe/proyecto/proceso/proceso.tex
@@ -61,3 +61,6 @@ En las imágenes 2.3 y 2.4 se muestran los tiempos dedicados para el desarrollo 
 \includegraphics[width=0.9\linewidth]{proyecto/proceso/imgs/modulo2}
 	\caption{Poyección del desarrollo (2)}
 \end{figure}
+
+\section{Metodología}
+La metodología a usar durante la implementación de cada uno de los módulos del proyecto será la metodología 'SCRUM', la cual está estrechamente relacionada con el proceso de desarrollo 'Prototipo', ya que permite definir unos objetivos claros al inicio de cada iteración y posteriormente generar un entregable que permita evaluar lo hecho para iniciar una nueva iteración. Además de eso, esta metodología permite un desarrollo incremental, que permitirá corregir y agregar funcionalidades no previstas en un principio o que hayan sido mal concebidas en iteraciones anteriores.
