INFORME: Diagramas de secuencia y comunicacion

--- a/informe/proyecto/caso/caso.tex
+++ b/informe/proyecto/caso/caso.tex
@@ -23,7 +23,7 @@ Generar una solución de software completa que permita administrar y monitorear 
 \end{enumerate}
 
 \section{Alcances}
-Se implementará un cliente de uso para público general que podrá realizar las siguientes actividades:
+Se implementará un aplicativo de uso para público general que podrá realizar las siguientes actividades:
 \begin{itemize}
 	\item Compra y reserva de boletas.
 	\item Selección de asientos.
@@ -32,8 +32,9 @@ Se implementará un cliente de uso para público general que podrá realizar las
 	\item Exposición y compra de confiteria.
 	\item Generación de tickets de pago.
 \end{itemize}
-
-Se implementará un cliente de uso para personal administrativo que podrá realizar las siguientes actividades:
+\leavevmode
+\linebreak
+Se implementará un aplicativo de uso para personal administrativo que podrá realizar las siguientes actividades:
 \begin{itemize}
 	\item Gestionamiento de cartelera, próximos estrenos y confiteria.
 	\item Asignación de funciones.
