Informe con diagrama de clases

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -149,4 +149,7 @@
 \chapterimage{4.pdf} % Chapter heading image
 \include{diseno/requerimientos/requerimientos}
 
+\chapterimage{5.pdf} % Chapter heading image
+\include{diseno/clases/clases}
+
 \end{document}
