INFORME: Patrones de diseño

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -152,4 +152,6 @@
 \chapterimage{5.pdf} % Chapter heading image
 \include{diseno/clases/clases}
 
+\chapterimage{2.pdf} % Chapter heading image
+\include{diseno/patrones/patrones}
 \end{document}
