--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -154,4 +154,10 @@
 
 \chapterimage{2.pdf} % Chapter heading image
 \include{diseno/patrones/patrones}
+
+\chapterimage{3.pdf}
+\include{diseno/estado/estado}
+
+
+
 \end{document}
