Diagrama de estados para clase Reserva

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -62,6 +62,7 @@
 \usepackage[spanish,es-noquoting,es-lcroman]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{float}
 \selectlanguage{spanish}
 
 %%% Matemáticas.
