Capitulo componente hecho

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -159,6 +159,7 @@
 \chapterimage{3.pdf}
 \include{diseno/estado/estado}
 
-
+\chapterimage{4.pdf}
+\include{diseno/componentes/componentes}	
 
 \end{document}
