--- a/informe/diseno/componentes/componentes.tex
+++ b/informe/diseno/componentes/componentes.tex
@@ -15,3 +15,8 @@ Los componentes se relacionan con dichas interfaces de dos maneras posibles, pro
 En caso de que sea una interfaz  proveida estamos hablando de aquellas cosas que el componente es capaz de realizar y que pone a servicio de otros componentes, mientras que si es una interfaz requerida son los elementos que un componente necesita para funcionar.
 
 En la siguiente imagen se muestra el diagrama de componetes propues para el proyecto Cine+.
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.8]{diseno/componentes/imgs/compCine+}
+	\caption{Diagrama Componentes de Cine+}
+\end{figure}
