--- a/informe/diseno/componentes/componentes.tex
+++ b/informe/diseno/componentes/componentes.tex
@@ -4,14 +4,20 @@
 \begin{figure}[h!]
 	\centering
 	\includegraphics[scale=0.8]{diseno/componentes/imgs/comp}
-	\caption{Diagrama Componentes}
+	\caption{Estructura de un Diagrama de Componentes}
 \end{figure}
 
-\subsection{ELEMENTOS}
+\subsection*{ELEMENTOS}
 Más allá del esquema de componentes, hay algo muy importante que toca tener en cuenta y son las interfaces. Las interfaces al ser abstracciones puras nos permiten generalizar y abstraer, valga la redundancia, los métodos más importantes que utilizarán los componentes. 
 
 Los componentes se relacionan con dichas interfaces de dos maneras posibles, proveyendolas o requiriendolas.
 
 En caso de que sea una interfaz  proveida estamos hablando de aquellas cosas que el componente es capaz de realizar y que pone a servicio de otros componentes, mientras que si es una interfaz requerida son los elementos que un componente necesita para funcionar.
 
-En la siguiente imagen se muestra el diagrama de componetes propues para el proyecto Cine+.
+En la siguiente imagen se muestra el diagrama de componetes propuesto para el proyecto Cine+.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.6]{diseno/componentes/imgs/diagramaComponentes}
+	\caption{Diagrama de Componentes}
+\end{figure}
