--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -160,6 +160,10 @@
 \include{diseno/estado/estado}
 
 \chapterimage{4.pdf}
+
 \include{diseno/componentes/componentes}	
+\chapterimage{5.pdf}
+\include{diseno/nodos/nodos}
+
 
 \end{document}
