--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -165,5 +165,8 @@
 \chapterimage{5.pdf}
 \include{diseno/nodos/nodos}
 
+\chapterimage{2.pdf}
+\include{diseno/actividades/actividades}
+
 
 \end{document}
