Diagrama de actividades para aplicativo administrativo

--- a/informe/diseno/actividades/actividades.tex
+++ b/informe/diseno/actividades/actividades.tex
@@ -16,9 +16,35 @@ Una de las principales características que tiene este diagrama es que tiene en 
 
 \section{Cine+}
 Para el aplicativo que se está realizando de Cine+ se detectaron los siguientes diagramas de estado, cada uno correspondiente a cada uno de las partes del aplicativo: administrativo y cliente.
-
+\subsection*{Aplicativo Cliente}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[scale=0.5]{diseno/actividades/img/actividadesCliente}
 	\caption{Diagrama de Nodos}
+\end{figure}
+
+\subsection*{Aplicativo Administrativo}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.5]{diseno/actividades/img/inicio}
+	\caption{Diagrama de actividades Aplicativo Administrativo}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.4]{diseno/actividades/img/empleados}
+	\caption{Diagrama de actividades Módulo Empleados}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.4]{diseno/actividades/img/inventario}
+	\caption{Diagrama de actividades Módulo Inventario}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.4]{diseno/actividades/img/funciones}
+	\caption{Diagrama de actividades Módulo Funciones}
 \end{figure}
