--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -168,5 +168,9 @@
 \chapterimage{2.pdf}
 \include{diseno/actividades/actividades}
 
+\part{REFLEXIONES}
+\chapterimage{3.pdf}
+\include{reflexiones/conclusiones}
+
 
 \end{document}
